// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`accesses 1`] = `
[
  {
    "accessState": 0,
    "accessType": 0,
    "currentState": 0,
    "gateRuntimePercentage": 0,
    "itemId": "item0",
    "name": "Haustür",
    "page": null,
    "sumState": 0,
  },
  {
    "accessState": 0,
    "accessType": 0,
    "currentState": 1,
    "gateRuntimePercentage": 0,
    "itemId": "item1",
    "name": "Garagentür",
    "page": null,
    "sumState": 0,
  },
  {
    "accessState": 0,
    "accessType": 0,
    "currentState": 2,
    "gateRuntimePercentage": 0,
    "itemId": "item2",
    "name": "Toreinfahrt",
    "page": null,
    "sumState": 0,
  },
]
`;

exports[`actions 1`] = `
[
  {
    "currentState": 0,
    "itemId": "item0",
    "name": "Alle Rollos schliessen",
    "page": "Rollos",
    "startCondition": 1,
    "sumState": 0,
  },
  {
    "currentState": 0,
    "itemId": "item1",
    "name": "Bettzeit",
    "page": "Kinder",
    "startCondition": 1,
    "sumState": 0,
  },
  {
    "currentState": 0,
    "itemId": "item2",
    "name": "Ambiente Licht",
    "page": "Wohnbereich",
    "startCondition": 1,
    "sumState": 0,
  },
  {
    "currentState": 1,
    "itemId": "item3",
    "name": "Sonnenschutz",
    "page": "Rollos",
    "startCondition": 1,
    "sumState": 0,
  },
  {
    "currentState": 0,
    "itemId": "item4",
    "name": "Alle Rollos öffnen",
    "page": "Rollos",
    "startCondition": 1,
    "sumState": 0,
  },
  {
    "currentState": 0,
    "itemId": "item5",
    "name": "Klingel",
    "page": "Meldungen",
    "startCondition": 0,
    "sumState": 3,
  },
  {
    "currentState": 0,
    "itemId": "item6",
    "name": "Rollos EG öffnen",
    "page": "Rollos",
    "startCondition": 1,
    "sumState": 0,
  },
  {
    "currentState": 0,
    "itemId": "item7",
    "name": "Licht aus",
    "page": "Wohnbereich",
    "startCondition": 1,
    "sumState": 0,
  },
  {
    "currentState": 0,
    "itemId": "item8",
    "name": "Rollos EG schliessen",
    "page": "Rollos",
    "startCondition": 1,
    "sumState": 0,
  },
  {
    "currentState": 0,
    "itemId": "item9",
    "name": "Rollos OG öffnen",
    "page": "Rollos",
    "startCondition": 1,
    "sumState": 0,
  },
  {
    "currentState": 0,
    "itemId": "item10",
    "name": "Rollos OG schliessen",
    "page": "Rollos",
    "startCondition": 1,
    "sumState": 0,
  },
  {
    "currentState": 0,
    "itemId": "item11",
    "name": "TV aus",
    "page": "Wohnbereich",
    "startCondition": 1,
    "sumState": 0,
  },
  {
    "currentState": 0,
    "itemId": "item12",
    "name": "Radio",
    "page": "Wohnbereich",
    "startCondition": 1,
    "sumState": 0,
  },
  {
    "currentState": 0,
    "itemId": "item13",
    "name": "Haus verlassen",
    "page": "Anwesenheit",
    "startCondition": 1,
    "sumState": 0,
  },
  {
    "currentState": 0,
    "itemId": "item14",
    "name": "Haus betreten",
    "page": "Anwesenheit",
    "startCondition": 1,
    "sumState": 0,
  },
  {
    "currentState": 0,
    "itemId": "item15",
    "name": "Neustart",
    "page": "System",
    "startCondition": 1,
    "sumState": 0,
  },
]
`;

exports[`airConditioner 1`] = `
[
  {
    "airQualityLevel": 0,
    "airQualitySetPointLevel": 0,
    "currentState": 0,
    "exhaustAirTemperature": 0,
    "exhaustAirTemperatureSetPoint": 0,
    "exhaustFlapOpeningLevel": 0,
    "exhaustPressure": 0,
    "exhaustPressureSetPoint": 0,
    "exhaustRelativeHumidityLevel": 0,
    "exhaustRelativeHumiditySetPointLevel": 0,
    "exhaustState": 0,
    "exhaustWorkingLevel": 0,
    "itemId": "item0",
    "name": "Schalfzimmer",
    "outgoingAirTemperature": 0,
    "outsideAirTemperature": 0,
    "page": "OG",
    "sumState": 0,
    "supplyAirTemperature": 23,
    "supplyAirTemperatureSetPoint": 0,
    "supplyFlapOpeningLevel": 0,
    "supplyPressure": 0,
    "supplyPressureSetPoint": 0,
    "supplyRelativeHumidityLevel": 0,
    "supplyRelativeHumiditySetPointLevel": 0,
    "supplyState": 0,
    "supplyWorkingLevel": 0,
    "workingLevelSetPointLevel": 100,
    "workingMode": 0,
  },
]
`;

exports[`alarmSystem 1`] = `
[
  {
    "alarmDevices": [
      {
        "deviceStatus": 1,
        "sharpState": 0,
        "systemState": 0,
        "zone": "Bereich 1",
      },
      {
        "deviceStatus": 1,
        "sharpState": 0,
        "systemState": 0,
        "zone": "Bereich 2",
      },
    ],
    "alarmSystemState": 0,
    "deviceModel": null,
    "itemId": "item0",
    "name": "Haus",
    "page": "Haus",
    "sumState": null,
  },
]
`;

exports[`analyses 1`] = `
[
  {
    "analysisVariables": [
      {
        "currentState": 1,
        "name": "Temperatur",
        "type": 0,
        "unit": "C°",
        "value": 7.9,
      },
      {
        "currentState": 1,
        "name": "UG",
        "type": 0,
        "unit": "C°",
        "value": 21.4,
      },
      {
        "currentState": 1,
        "name": "EG",
        "type": 0,
        "unit": "C°",
        "value": 22.9,
      },
      {
        "currentState": 1,
        "name": "OG",
        "type": 0,
        "unit": "C°",
        "value": 22.8,
      },
    ],
    "itemId": "item0",
    "name": "Temperaturen",
    "page": null,
    "sumState": 0,
  },
  {
    "analysisVariables": [
      {
        "currentState": 1,
        "name": "Garten",
        "type": 0,
        "unit": "%rF",
        "value": 75,
      },
      {
        "currentState": 1,
        "name": "UG",
        "type": 0,
        "unit": "%rF",
        "value": 65,
      },
      {
        "currentState": 1,
        "name": "EG",
        "type": 0,
        "unit": "%rF",
        "value": 43,
      },
      {
        "currentState": 1,
        "name": "OG",
        "type": 0,
        "unit": "%rF",
        "value": 22,
      },
    ],
    "itemId": "item1",
    "name": "Luftfeuchte",
    "page": null,
    "sumState": 0,
  },
]
`;

exports[`blinds 1`] = `
[
  {
    "currentState": 0,
    "itemId": "item0",
    "name": "Terrassentür",
    "page": "Gästezimmer",
    "position": 100,
    "rotationLevel": 50,
    "rotationRange": 90,
    "sumState": 0,
  },
  {
    "currentState": 0,
    "itemId": "item1",
    "name": "Fenster",
    "page": "Bad EG",
    "position": 100,
    "rotationLevel": 15,
    "rotationRange": 90,
    "sumState": 0,
  },
  {
    "currentState": 0,
    "itemId": "item2",
    "name": "Essecke",
    "page": "Wohnbereich",
    "position": 99.59,
    "rotationLevel": 25,
    "rotationRange": 90,
    "sumState": 0,
  },
  {
    "currentState": 0,
    "itemId": "item3",
    "name": "Essecke klein",
    "page": "Wohnbereich",
    "position": 100,
    "rotationLevel": 15,
    "rotationRange": 90,
    "sumState": 0,
  },
  {
    "currentState": 0,
    "itemId": "item4",
    "name": "Terrassentür",
    "page": "Wohnbereich",
    "position": 19.62,
    "rotationLevel": 50,
    "rotationRange": 90,
    "sumState": 0,
  },
  {
    "currentState": 0,
    "itemId": "item5",
    "name": "Terrassentür fest",
    "page": "Wohnbereich",
    "position": 100,
    "rotationLevel": 100,
    "rotationRange": 90,
    "sumState": 0,
  },
  {
    "currentState": 0,
    "itemId": "item6",
    "name": "Terrassentür klein",
    "page": "Wohnbereich",
    "position": 100,
    "rotationLevel": 25,
    "rotationRange": 90,
    "sumState": 0,
  },
  {
    "currentState": 0,
    "itemId": "item7",
    "name": "Terrassentür klein fest",
    "page": "Wohnbereich",
    "position": 100,
    "rotationLevel": 25,
    "rotationRange": 90,
    "sumState": 0,
  },
  {
    "currentState": 0,
    "itemId": "item8",
    "name": "Gallerie",
    "page": "Gallerie",
    "position": 100,
    "rotationLevel": 25,
    "rotationRange": 90,
    "sumState": 0,
  },
  {
    "currentState": 0,
    "itemId": "item9",
    "name": "Panorama",
    "page": "Bad OG",
    "position": 100,
    "rotationLevel": 75,
    "rotationRange": 90,
    "sumState": 0,
  },
  {
    "currentState": 0,
    "itemId": "item10",
    "name": "Fenster",
    "page": "Bad OG",
    "position": 100,
    "rotationLevel": 75,
    "rotationRange": 90,
    "sumState": 0,
  },
  {
    "currentState": 0,
    "itemId": "item11",
    "name": "Balkontür",
    "page": "Bad OG",
    "position": 100,
    "rotationLevel": 25,
    "rotationRange": 90,
    "sumState": 0,
  },
  {
    "currentState": 0,
    "itemId": "item12",
    "name": "Bodentiefesfenster",
    "page": "Schlafzimmer",
    "position": 100,
    "rotationLevel": 0,
    "rotationRange": 90,
    "sumState": 0,
  },
  {
    "currentState": 0,
    "itemId": "item13",
    "name": "Balkontür",
    "page": "Schlafzimmer",
    "position": 52.75,
    "rotationLevel": 50,
    "rotationRange": 90,
    "sumState": 0,
  },
  {
    "currentState": 0,
    "itemId": "item14",
    "name": "Flügelfenster",
    "page": "Büro",
    "position": 100,
    "rotationLevel": 100,
    "rotationRange": 90,
    "sumState": 0,
  },
  {
    "currentState": 0,
    "itemId": "item15",
    "name": "Flügelfenster",
    "page": "Kinder Zimmer",
    "position": 98.76,
    "rotationLevel": 25,
    "rotationRange": 90,
    "sumState": 0,
  },
  {
    "currentState": 0,
    "itemId": "item16",
    "name": "Bodentiefesfenster",
    "page": "Büro",
    "position": 100,
    "rotationLevel": 50,
    "rotationRange": 90,
    "sumState": 0,
  },
  {
    "currentState": 0,
    "itemId": "item17",
    "name": "Bodentiefesfenster",
    "page": "Kinder Zimmer",
    "position": 100,
    "rotationLevel": 50,
    "rotationRange": 90,
    "sumState": 0,
  },
]
`;

exports[`cameras 1`] = `
[
  {
    "cgiUrl": null,
    "imageUrl": "https://www.my-gekko.com/webcams/dfh/webcam01.jpg",
    "itemId": "item0",
    "name": "Südtirol",
    "newRecordCount": 0,
    "page": "Kameras",
    "streamUrl": null,
    "sumState": null,
  },
  {
    "cgiUrl": null,
    "imageUrl": "https://www.dwd.de/DWD/wetter/radar/radfilm_brd_akt.gif",
    "itemId": "item1",
    "name": "Regenradar",
    "newRecordCount": 0,
    "page": "Wetter",
    "streamUrl": null,
    "sumState": null,
  },
]
`;

exports[`clocks 1`] = `
[
  {
    "currentState": 0,
    "itemId": "item0",
    "name": "Rollos",
    "page": "Urlaub",
    "startCondition": 1,
    "sumState": 0,
  },
  {
    "currentState": 2,
    "itemId": "item1",
    "name": "Licht",
    "page": "Urlaub",
    "startCondition": 2,
    "sumState": 0,
  },
  {
    "currentState": 0,
    "itemId": "item2",
    "name": "Lüftung",
    "page": "Urlaub",
    "startCondition": 1,
    "sumState": 0,
  },
  {
    "currentState": 2,
    "itemId": "item3",
    "name": "Wasser",
    "page": "Urlaub",
    "startCondition": 1,
    "sumState": 1,
  },
  {
    "currentState": 0,
    "itemId": "item4",
    "name": "Radio",
    "page": "Urlaub",
    "startCondition": 1,
    "sumState": 0,
  },
  {
    "currentState": 0,
    "itemId": "item5",
    "name": "Kamera",
    "page": "Urlaub",
    "startCondition": 1,
    "sumState": 0,
  },
  {
    "currentState": 1,
    "itemId": "item6",
    "name": "Bäder",
    "page": "Heizung",
    "startCondition": 1,
    "sumState": 0,
  },
  {
    "currentState": 0,
    "itemId": "item7",
    "name": "Sonneschutz 7-11",
    "page": "Rollos",
    "startCondition": 1,
    "sumState": 1,
  },
  {
    "currentState": 0,
    "itemId": "item8",
    "name": "Sonnenschutz 11-15",
    "page": "Rollos",
    "startCondition": 1,
    "sumState": 0,
  },
  {
    "currentState": 0,
    "itemId": "item9",
    "name": "Sonnenschutz 15 -19",
    "page": "Rollos",
    "startCondition": 1,
    "sumState": 0,
  },
  {
    "currentState": 0,
    "itemId": "item10",
    "name": "Nacht Absenk",
    "page": "Heizung",
    "startCondition": 1,
    "sumState": 0,
  },
]
`;

exports[`controlCircuits 1`] = `
[
  {
    "itemId": "item0",
    "name": "Regelkreis EG",
    "page": "EG",
    "pump1WorkingPowerLevel": 75,
    "pump2WorkingPowerLevel": 50,
    "pump3WorkingPowerLevel": 25,
    "sensor": 56.1,
    "sensorType": 0,
    "sumState": 0,
  },
]
`;

exports[`energyCosts 1`] = `
[
  {
    "counterDirection": null,
    "currentPower": 1.02,
    "energyUnit": "kWh",
    "itemId": "item0",
    "name": "Hausverbrauch",
    "nominalPower": 10,
    "page": "Stromzähler",
    "powerUnit": "kW",
    "startDateTotalEnergyInPeriod": "01.01.2022 12:00:00",
    "sumState": 0,
    "totalEnergy": 25427.3,
    "totalEnergyInPeriod": 18422.6,
    "totalEnergyMonth": 821.35,
    "totalEnergyThisYear": 3641.82,
    "totalEnergyToday": 11.84,
    "totalEnergyToday0h6h": 4570,
    "totalEnergyToday12h18h": 83,
    "totalEnergyToday18h24h": 0,
    "totalEnergyToday6h12h": 7192,
    "totalEnergyYesterday0h6h": 0,
    "totalEnergyYesterday12h18h": 0,
    "totalEnergyYesterday18h24h": 932,
    "totalEnergyYesterday6h12h": 0,
  },
  {
    "counterDirection": null,
    "currentPower": 0,
    "energyUnit": "kWh",
    "itemId": "item1",
    "name": "Netzbezug",
    "nominalPower": 10,
    "page": "Stromzähler",
    "powerUnit": "kW",
    "startDateTotalEnergyInPeriod": "01.01.2022 12:00:00",
    "sumState": 0,
    "totalEnergy": 12813.29,
    "totalEnergyInPeriod": 9514.52,
    "totalEnergyMonth": 395.22,
    "totalEnergyThisYear": 2584.47,
    "totalEnergyToday": 8.45,
    "totalEnergyToday0h6h": 4570,
    "totalEnergyToday12h18h": 1,
    "totalEnergyToday18h24h": 0,
    "totalEnergyToday6h12h": 3876,
    "totalEnergyYesterday0h6h": 0,
    "totalEnergyYesterday12h18h": 0,
    "totalEnergyYesterday18h24h": 932,
    "totalEnergyYesterday6h12h": 0,
  },
  {
    "counterDirection": null,
    "currentPower": 1.13,
    "energyUnit": "kWh",
    "itemId": "item2",
    "name": "Solarproduktion",
    "nominalPower": 10,
    "page": "Stromzähler",
    "powerUnit": "kW",
    "startDateTotalEnergyInPeriod": "01.01.2022 12:00:00",
    "sumState": 0,
    "totalEnergy": 17315.13,
    "totalEnergyInPeriod": 12191.88,
    "totalEnergyMonth": 530.8,
    "totalEnergyThisYear": 1218.21,
    "totalEnergyToday": 4,
    "totalEnergyToday0h6h": 0,
    "totalEnergyToday12h18h": 68,
    "totalEnergyToday18h24h": 0,
    "totalEnergyToday6h12h": 3929,
    "totalEnergyYesterday0h6h": 0,
    "totalEnergyYesterday12h18h": 0,
    "totalEnergyYesterday18h24h": 0,
    "totalEnergyYesterday6h12h": 0,
  },
  {
    "counterDirection": null,
    "currentPower": 0,
    "energyUnit": "kWh",
    "itemId": "item3",
    "name": "Netzeinspeisung",
    "nominalPower": 10,
    "page": "Stromzähler",
    "powerUnit": "kW",
    "startDateTotalEnergyInPeriod": "01.01.2022 12:00:00",
    "sumState": 0,
    "totalEnergy": 4518.25,
    "totalEnergyInPeriod": 3149.32,
    "totalEnergyMonth": 98.38,
    "totalEnergyThisYear": 145.65,
    "totalEnergyToday": 0.02,
    "totalEnergyToday0h6h": 0,
    "totalEnergyToday12h18h": 1,
    "totalEnergyToday18h24h": 0,
    "totalEnergyToday6h12h": 15,
    "totalEnergyYesterday0h6h": 0,
    "totalEnergyYesterday12h18h": 0,
    "totalEnergyYesterday18h24h": 0,
    "totalEnergyYesterday6h12h": 0,
  },
  {
    "counterDirection": null,
    "currentPower": 0.1,
    "energyUnit": "kWh",
    "itemId": "item4",
    "name": "Batterieladung",
    "nominalPower": 10,
    "page": "Stromzähler",
    "powerUnit": "kW",
    "startDateTotalEnergyInPeriod": "01.01.2022 12:00:00",
    "sumState": 0,
    "totalEnergy": 4132.97,
    "totalEnergyInPeriod": 2846.44,
    "totalEnergyMonth": 121.87,
    "totalEnergyThisYear": 274.89,
    "totalEnergyToday": 0.73,
    "totalEnergyToday0h6h": 0,
    "totalEnergyToday12h18h": 1,
    "totalEnergyToday18h24h": 0,
    "totalEnergyToday6h12h": 731,
    "totalEnergyYesterday0h6h": 0,
    "totalEnergyYesterday12h18h": 0,
    "totalEnergyYesterday18h24h": 0,
    "totalEnergyYesterday6h12h": 0,
  },
  {
    "counterDirection": null,
    "currentPower": 0,
    "energyUnit": "kWh",
    "itemId": "item5",
    "name": "Batterieentladung",
    "nominalPower": 10,
    "page": "Stromzähler",
    "powerUnit": "kW",
    "startDateTotalEnergyInPeriod": "01.01.2022 12:00:00",
    "sumState": 0,
    "totalEnergy": 3943.92,
    "totalEnergyInPeriod": 2711.38,
    "totalEnergyMonth": 115.55,
    "totalEnergyThisYear": 259.63,
    "totalEnergyToday": 0.15,
    "totalEnergyToday0h6h": 0,
    "totalEnergyToday12h18h": 15,
    "totalEnergyToday18h24h": 0,
    "totalEnergyToday6h12h": 134,
    "totalEnergyYesterday0h6h": 0,
    "totalEnergyYesterday12h18h": 0,
    "totalEnergyYesterday18h24h": 0,
    "totalEnergyYesterday6h12h": 0,
  },
  {
    "counterDirection": null,
    "currentPower": 0,
    "energyUnit": "kWh",
    "itemId": "item6",
    "name": "Bad EG",
    "nominalPower": 10,
    "page": "Fussbodenheizung",
    "powerUnit": "kW",
    "startDateTotalEnergyInPeriod": "01.01.2022 12:00:00",
    "sumState": 0,
    "totalEnergy": 351.39,
    "totalEnergyInPeriod": 262.71,
    "totalEnergyMonth": 0.84,
    "totalEnergyThisYear": 43.66,
    "totalEnergyToday": 0,
    "totalEnergyToday0h6h": 0,
    "totalEnergyToday12h18h": 0,
    "totalEnergyToday18h24h": 0,
    "totalEnergyToday6h12h": 0,
    "totalEnergyYesterday0h6h": 0,
    "totalEnergyYesterday12h18h": 0,
    "totalEnergyYesterday18h24h": 0,
    "totalEnergyYesterday6h12h": 0,
  },
  {
    "counterDirection": null,
    "currentPower": 0,
    "energyUnit": "kWh",
    "itemId": "item7",
    "name": "Bad OG",
    "nominalPower": 10,
    "page": "Fussbodenheizung",
    "powerUnit": "kW",
    "startDateTotalEnergyInPeriod": "01.01.2022 12:00:00",
    "sumState": 0,
    "totalEnergy": 160.5,
    "totalEnergyInPeriod": 104.57,
    "totalEnergyMonth": 1.85,
    "totalEnergyThisYear": 16.96,
    "totalEnergyToday": 0,
    "totalEnergyToday0h6h": 0,
    "totalEnergyToday12h18h": 0,
    "totalEnergyToday18h24h": 0,
    "totalEnergyToday6h12h": 0,
    "totalEnergyYesterday0h6h": 0,
    "totalEnergyYesterday12h18h": 0,
    "totalEnergyYesterday18h24h": 0,
    "totalEnergyYesterday6h12h": 0,
  },
  {
    "counterDirection": null,
    "currentPower": 0.35,
    "energyUnit": "kWh",
    "itemId": "item8",
    "name": "Licht",
    "nominalPower": 10,
    "page": "Summen",
    "powerUnit": "kW",
    "startDateTotalEnergyInPeriod": "01.01.2022 12:00:00",
    "sumState": 0,
    "totalEnergy": 1367.17,
    "totalEnergyInPeriod": 975.54,
    "totalEnergyMonth": 28.17,
    "totalEnergyThisYear": 217.98,
    "totalEnergyToday": 1.41,
    "totalEnergyToday0h6h": 0,
    "totalEnergyToday12h18h": 25,
    "totalEnergyToday18h24h": 0,
    "totalEnergyToday6h12h": 1383,
    "totalEnergyYesterday0h6h": 0,
    "totalEnergyYesterday12h18h": 0,
    "totalEnergyYesterday18h24h": 267,
    "totalEnergyYesterday6h12h": 0,
  },
  {
    "counterDirection": null,
    "currentPower": 0,
    "energyUnit": "kWh",
    "itemId": "item9",
    "name": "Fussbodenheizungen",
    "nominalPower": 10,
    "page": "Summen",
    "powerUnit": "kW",
    "startDateTotalEnergyInPeriod": "01.01.2022 12:00:00",
    "sumState": 0,
    "totalEnergy": 649.75,
    "totalEnergyInPeriod": 452.57,
    "totalEnergyMonth": 11.46,
    "totalEnergyThisYear": 89.42,
    "totalEnergyToday": 0.12,
    "totalEnergyToday0h6h": 58,
    "totalEnergyToday12h18h": 0,
    "totalEnergyToday18h24h": 0,
    "totalEnergyToday6h12h": 64,
    "totalEnergyYesterday0h6h": 0,
    "totalEnergyYesterday12h18h": 0,
    "totalEnergyYesterday18h24h": 12,
    "totalEnergyYesterday6h12h": 0,
  },
  {
    "counterDirection": null,
    "currentPower": 0,
    "energyUnit": "kWh",
    "itemId": "item10",
    "name": "Lüftung",
    "nominalPower": 10,
    "page": "Summen",
    "powerUnit": "kW",
    "startDateTotalEnergyInPeriod": "01.01.2022 12:00:00",
    "sumState": 0,
    "totalEnergy": 0,
    "totalEnergyInPeriod": 0,
    "totalEnergyMonth": 0,
    "totalEnergyThisYear": 0,
    "totalEnergyToday": 0,
    "totalEnergyToday0h6h": 0,
    "totalEnergyToday12h18h": 0,
    "totalEnergyToday18h24h": 0,
    "totalEnergyToday6h12h": 0,
    "totalEnergyYesterday0h6h": 0,
    "totalEnergyYesterday12h18h": 0,
    "totalEnergyYesterday18h24h": 0,
    "totalEnergyYesterday6h12h": 0,
  },
  {
    "counterDirection": null,
    "currentPower": 0,
    "energyUnit": "kWh",
    "itemId": "item11",
    "name": "Steckdosen",
    "nominalPower": 10,
    "page": "Summen",
    "powerUnit": "kW",
    "startDateTotalEnergyInPeriod": "01.01.2022 12:00:00",
    "sumState": 0,
    "totalEnergy": 59.09,
    "totalEnergyInPeriod": 0.01,
    "totalEnergyMonth": 0,
    "totalEnergyThisYear": 0,
    "totalEnergyToday": 0,
    "totalEnergyToday0h6h": 0,
    "totalEnergyToday12h18h": 0,
    "totalEnergyToday18h24h": 0,
    "totalEnergyToday6h12h": 0,
    "totalEnergyYesterday0h6h": 0,
    "totalEnergyYesterday12h18h": 0,
    "totalEnergyYesterday18h24h": 0,
    "totalEnergyYesterday6h12h": 0,
  },
  {
    "counterDirection": null,
    "currentPower": 0.01,
    "energyUnit": "kWh",
    "itemId": "item12",
    "name": "Mbus Zähler",
    "nominalPower": 10,
    "page": "Stromzähler",
    "powerUnit": "kW",
    "startDateTotalEnergyInPeriod": "01.01.2022 12:00:00",
    "sumState": 0,
    "totalEnergy": 1712.7,
    "totalEnergyInPeriod": 37.6,
    "totalEnergyMonth": 2.2,
    "totalEnergyThisYear": 7.1,
    "totalEnergyToday": 0,
    "totalEnergyToday0h6h": 0,
    "totalEnergyToday12h18h": 0,
    "totalEnergyToday18h24h": 0,
    "totalEnergyToday6h12h": 0,
    "totalEnergyYesterday0h6h": 0,
    "totalEnergyYesterday12h18h": 0,
    "totalEnergyYesterday18h24h": 0,
    "totalEnergyYesterday6h12h": 0,
  },
]
`;

exports[`energyManager 1`] = `
[
  {
    "batteryModel": 1,
    "batterySoCLevel": 58,
    "batteryState": 1,
    "currentAlternativePowerConsumption": 0,
    "currentHomePowerConsumption": 423,
    "currentPowerChargingBattery": 1386,
    "currentPowerExportedToNet": 3,
    "currentPowerFromBattery": 426,
    "currentPowerFromSolarPanels": 6231,
    "emsEnabledState": 1,
    "emsState": 0,
    "itemId": "item0",
    "loadSheddingState": 0,
    "maximumPowerBattery": null,
    "maximumPowerConsumptionFromNet": 25,
    "maximumPowerExportToNet": 0.5,
    "maximumPowerSolarPanels": null,
    "name": "Energiemanager",
    "netMeterCurrentPower": -3,
    "netMeterState": 1,
    "page": "E3DC",
    "solarPanelState": 1,
    "sumState": 0,
    "totalDailyEnergyChargingBattery": 6054.4,
    "totalDailyEnergyFromBattery": 4934.75,
    "totalDailyEnergyFromSolarPanels": 27653.49,
    "totalDailyExportedEnergyToNet": 12579.97,
    "totalDailyHomeEnergyConsumption": 15137.48,
    "totalDailyImportedEnergyFromNet": 1159.33,
  },
]
`;

exports[`gekkoInfo 1`] = `
{
  "gekkoName": "Demo",
  "hardware": "Slide 2 (XXAAXXAACCAA)",
  "itemId": null,
  "language": 2,
  "name": null,
  "page": null,
  "sumState": null,
  "version": 680000,
}
`;

exports[`globalAlarm 1`] = `
{
  "itemId": null,
  "name": null,
  "page": null,
  "state": 2,
  "sumState": null,
}
`;

exports[`heatingCircuits 1`] = `
[
  {
    "coolingModeState": 1,
    "currentState": null,
    "deviceModel": 1,
    "dewPoint": null,
    "flowTemperature": 45,
    "flowTemperatureSetPoint": 50,
    "itemId": "item0",
    "name": "Heizkreis 1",
    "page": null,
    "pumpWorkingLevel": 100,
    "returnFlowTemperature": null,
    "sumState": 0,
    "valveOpeningLevel": 100,
  },
  {
    "coolingModeState": 1,
    "currentState": null,
    "deviceModel": 1,
    "dewPoint": null,
    "flowTemperature": 45,
    "flowTemperatureSetPoint": 50,
    "itemId": "item1",
    "name": "Heizkreis 2",
    "page": null,
    "pumpWorkingLevel": 0,
    "returnFlowTemperature": null,
    "sumState": 0,
    "valveOpeningLevel": 0,
  },
  {
    "coolingModeState": 1,
    "currentState": null,
    "deviceModel": 1,
    "dewPoint": null,
    "flowTemperature": 45,
    "flowTemperatureSetPoint": 50,
    "itemId": "item2",
    "name": "Heizkreis 3",
    "page": null,
    "pumpWorkingLevel": 50,
    "returnFlowTemperature": null,
    "sumState": 0,
    "valveOpeningLevel": 100,
  },
]
`;

exports[`heatingSystems 1`] = `
[
  {
    "coolingModeState": 0,
    "currentState": 37.07,
    "deviceModel": 0,
    "flowTemperature": 100,
    "flowTemperatureSetPoint": 55,
    "itemId": "item0",
    "name": "Therme",
    "page": null,
    "sumState": 100,
  },
]
`;

exports[`hotWaterCirculations 1`] = `
[
  {
    "currentState": 1,
    "itemId": "item0",
    "name": "Zirkulationskreis",
    "page": "Viessamann Zirkulation",
    "pumpType": 0,
    "returnWaterTemperature": 65,
    "returnWaterTemperatureSetPoint": 75,
    "sumState": 0,
  },
]
`;

exports[`hotWaterSystems 1`] = `
[
  {
    "collectorTemperature": 55,
    "coolingModeState": 0,
    "currentState": 1,
    "deviceModel": 3,
    "itemId": "item0",
    "name": "WW Boiler EG",
    "page": null,
    "sumState": 0,
    "waterTemperatureBottom": 47,
    "waterTemperatureSetPoint": 41,
    "waterTemperatureTop": 49.5,
  },
  {
    "collectorTemperature": 60,
    "coolingModeState": 0,
    "currentState": 1,
    "deviceModel": 3,
    "itemId": "item1",
    "name": "WW Boiler OG",
    "page": null,
    "sumState": 0,
    "waterTemperatureBottom": 41,
    "waterTemperatureSetPoint": 41,
    "waterTemperatureTop": 44.5,
  },
]
`;

exports[`lights 1`] = `
[
  {
    "currentState": 0,
    "dimLevel": null,
    "itemId": "item0",
    "name": "Stehlampe",
    "page": "Wohnbereich",
    "rgbColor": null,
    "sumState": 0,
    "tunableWhiteLevel": null,
  },
  {
    "currentState": 0,
    "dimLevel": null,
    "itemId": "item1",
    "name": "Spiegel",
    "page": "Bad EG",
    "rgbColor": null,
    "sumState": 0,
    "tunableWhiteLevel": null,
  },
  {
    "currentState": 0,
    "dimLevel": null,
    "itemId": "item2",
    "name": "TV Sideboard",
    "page": "Wohnbereich",
    "rgbColor": null,
    "sumState": 0,
    "tunableWhiteLevel": null,
  },
  {
    "currentState": 0,
    "dimLevel": 70,
    "itemId": "item3",
    "name": "EG Spots",
    "page": "Flur",
    "rgbColor": null,
    "sumState": 0,
    "tunableWhiteLevel": 50,
  },
  {
    "currentState": 0,
    "dimLevel": null,
    "itemId": "item4",
    "name": "Tresen Leds",
    "page": "Küche",
    "rgbColor": null,
    "sumState": 0,
    "tunableWhiteLevel": null,
  },
  {
    "currentState": 0,
    "dimLevel": 40,
    "itemId": "item5",
    "name": "Deckenlampe",
    "page": "Bad EG",
    "rgbColor": 16711697,
    "sumState": 0,
    "tunableWhiteLevel": null,
  },
  {
    "currentState": 0,
    "dimLevel": null,
    "itemId": "item6",
    "name": "Deckenlampe",
    "page": "Schlafzimmer",
    "rgbColor": null,
    "sumState": 0,
    "tunableWhiteLevel": null,
  },
  {
    "currentState": 0,
    "dimLevel": 100,
    "itemId": "item7",
    "name": "Tresen Lampen",
    "page": "Küche",
    "rgbColor": null,
    "sumState": 0,
    "tunableWhiteLevel": null,
  },
  {
    "currentState": 1,
    "dimLevel": 100,
    "itemId": "item8",
    "name": "Spots",
    "page": "Küche",
    "rgbColor": 16777215,
    "sumState": 0,
    "tunableWhiteLevel": null,
  },
  {
    "currentState": 0,
    "dimLevel": null,
    "itemId": "item9",
    "name": "Terrasse",
    "page": "Aussenbereich",
    "rgbColor": null,
    "sumState": 0,
    "tunableWhiteLevel": null,
  },
  {
    "currentState": 1,
    "dimLevel": 50,
    "itemId": "item10",
    "name": "Spots",
    "page": "Abstellkammer",
    "rgbColor": null,
    "sumState": 0,
    "tunableWhiteLevel": 10,
  },
  {
    "currentState": 0,
    "dimLevel": 1,
    "itemId": "item11",
    "name": "Spots Seite",
    "page": "Kinder Zimmer",
    "rgbColor": 16713728,
    "sumState": 0,
    "tunableWhiteLevel": null,
  },
  {
    "currentState": 0,
    "dimLevel": 100,
    "itemId": "item12",
    "name": "Tisch Lampen",
    "page": "Essecke",
    "rgbColor": null,
    "sumState": 0,
    "tunableWhiteLevel": null,
  },
  {
    "currentState": 1,
    "dimLevel": 59.69,
    "itemId": "item13",
    "name": "Spots",
    "page": "Gästezimmer",
    "rgbColor": 16777215,
    "sumState": 0,
    "tunableWhiteLevel": null,
  },
  {
    "currentState": 0,
    "dimLevel": 5,
    "itemId": "item14",
    "name": "Spots",
    "page": "Wohnbereich",
    "rgbColor": 15277667,
    "sumState": 0,
    "tunableWhiteLevel": null,
  },
  {
    "currentState": 0,
    "dimLevel": null,
    "itemId": "item15",
    "name": "Deckenlampe",
    "page": "Wohnbereich",
    "rgbColor": null,
    "sumState": 0,
    "tunableWhiteLevel": null,
  },
  {
    "currentState": 0,
    "dimLevel": 35,
    "itemId": "item16",
    "name": "Dusche Spots",
    "page": "Bad OG",
    "rgbColor": 16777215,
    "sumState": 0,
    "tunableWhiteLevel": null,
  },
  {
    "currentState": 0,
    "dimLevel": 9,
    "itemId": "item17",
    "name": "Spots Seite",
    "page": "Büro",
    "rgbColor": 16777215,
    "sumState": 0,
    "tunableWhiteLevel": null,
  },
  {
    "currentState": 0,
    "dimLevel": 0,
    "itemId": "item18",
    "name": "OG Spots",
    "page": "Flur",
    "rgbColor": 16777215,
    "sumState": 0,
    "tunableWhiteLevel": null,
  },
  {
    "currentState": 0,
    "dimLevel": null,
    "itemId": "item19",
    "name": "Gallerie Lampe",
    "page": "Wohnbereich",
    "rgbColor": null,
    "sumState": 0,
    "tunableWhiteLevel": null,
  },
  {
    "currentState": 1,
    "dimLevel": null,
    "itemId": "item24",
    "name": "Terrasse einzeln",
    "page": "Aussenbereich",
    "rgbColor": null,
    "sumState": 0,
    "tunableWhiteLevel": null,
  },
  {
    "currentState": 0,
    "dimLevel": 90,
    "itemId": "item25",
    "name": "Spot Mitte",
    "page": "Büro",
    "rgbColor": 16777215,
    "sumState": 0,
    "tunableWhiteLevel": null,
  },
  {
    "currentState": 0,
    "dimLevel": 78,
    "itemId": "item26",
    "name": "4x Spots",
    "page": "Büro",
    "rgbColor": 16777215,
    "sumState": 0,
    "tunableWhiteLevel": null,
  },
  {
    "currentState": 0,
    "dimLevel": 72,
    "itemId": "item27",
    "name": "Bad Spots",
    "page": "Bad OG",
    "rgbColor": 16777215,
    "sumState": 0,
    "tunableWhiteLevel": null,
  },
  {
    "currentState": 0,
    "dimLevel": 90,
    "itemId": "item28",
    "name": "Spiegel",
    "page": "Bad OG",
    "rgbColor": 16777215,
    "sumState": 0,
    "tunableWhiteLevel": null,
  },
  {
    "currentState": 0,
    "dimLevel": 36,
    "itemId": "item29",
    "name": "Ankleide Spots",
    "page": "Schlafzimmer",
    "rgbColor": 16777215,
    "sumState": 0,
    "tunableWhiteLevel": null,
  },
  {
    "currentState": 0,
    "dimLevel": 45,
    "itemId": "item31",
    "name": "Deckenlampe",
    "page": "Kinder Zimmer",
    "rgbColor": 16777215,
    "sumState": 0,
    "tunableWhiteLevel": null,
  },
  {
    "currentState": 0,
    "dimLevel": 68,
    "itemId": "item32",
    "name": "4x Spots",
    "page": "Kinder Zimmer",
    "rgbColor": 16777215,
    "sumState": 0,
    "tunableWhiteLevel": null,
  },
  {
    "currentState": 0,
    "dimLevel": 10,
    "itemId": "item34",
    "name": "Treppe",
    "page": "Flur",
    "rgbColor": 16777215,
    "sumState": 0,
    "tunableWhiteLevel": null,
  },
]
`;

exports[`loads 1`] = `
[
  {
    "currentState": 1,
    "itemId": "item0",
    "name": "Stehlampe",
    "page": null,
    "sumState": 0,
  },
  {
    "currentState": 0,
    "itemId": "item1",
    "name": "TV",
    "page": null,
    "sumState": 0,
  },
  {
    "currentState": 0,
    "itemId": "item2",
    "name": "Büro Lampe",
    "page": null,
    "sumState": 0,
  },
  {
    "currentState": 1,
    "itemId": "item3",
    "name": "TV Gäste",
    "page": null,
    "sumState": 0,
  },
  {
    "currentState": 0,
    "itemId": "item4",
    "name": "Bewässerung",
    "page": null,
    "sumState": 0,
  },
  {
    "currentState": 0,
    "itemId": "item5",
    "name": "Heizkörper Garage",
    "page": null,
    "sumState": 1,
  },
  {
    "currentState": 0,
    "itemId": "item6",
    "name": "Heizkörper Hobbyraum",
    "page": null,
    "sumState": 0,
  },
]
`;

exports[`logics 1`] = `
[
  {
    "itemId": "item0",
    "name": "Kühlung",
    "page": "Heizung",
    "sumState": null,
    "value": 0,
  },
  {
    "itemId": "item1",
    "name": "Sonnenschutz ?",
    "page": "Rollos",
    "sumState": null,
    "value": 1,
  },
  {
    "itemId": "item2",
    "name": "Sonnenschutz",
    "page": "Rollos",
    "sumState": null,
    "value": 1,
  },
  {
    "itemId": "item3",
    "name": "Feuchte",
    "page": "Heizung",
    "sumState": null,
    "value": 0,
  },
  {
    "itemId": "item4",
    "name": "Dimm EG",
    "page": "Licht",
    "sumState": null,
    "value": 0,
  },
  {
    "itemId": "item5",
    "name": "Test",
    "page": "Heizung",
    "sumState": null,
    "value": 0,
  },
]
`;

exports[`multiRooms 1`] = `
[
  {
    "currentAudioTitle": "stream.mp3",
    "currentPlayingTime": 0,
    "currentPlaylistIndex": 8,
    "currentSongIndex": 2,
    "currentState": 0,
    "currentVolume": 10,
    "itemId": "item1",
    "name": "Sonos Flur",
    "page": null,
    "playList": [
      {
        "index": 0,
        "name": "Rock",
      },
      {
        "index": 1,
        "name": "Pop",
      },
      {
        "index": 2,
        "name": "Country",
      },
      {
        "index": 3,
        "name": "RNB",
      },
      {
        "index": 4,
        "name": "Oldschool",
      },
      {
        "index": 5,
        "name": "HipHop",
      },
      {
        "index": 6,
        "name": "Deutsch",
      },
      {
        "index": 7,
        "name": "Schlager",
      },
      {
        "index": 8,
        "name": "Modern",
      },
      {
        "index": 9,
        "name": "Classic",
      },
      {
        "index": 10,
        "name": "Kinderlieder",
      },
      {
        "index": 11,
        "name": "Server",
      },
      {
        "index": 12,
        "name": "Techno",
      },
      {
        "index": 13,
        "name": "House",
      },
      {
        "index": 14,
        "name": "Funk",
      },
      {
        "index": 15,
        "name": "Metal",
      },
    ],
    "sumState": null,
  },
  {
    "currentAudioTitle": "stream.mp3",
    "currentPlayingTime": 0,
    "currentPlaylistIndex": 8,
    "currentSongIndex": 2,
    "currentState": 1,
    "currentVolume": 50,
    "itemId": "item2",
    "name": "Sonos Bad EG",
    "page": null,
    "playList": [
      {
        "index": 0,
        "name": "Rock",
      },
      {
        "index": 1,
        "name": "Pop",
      },
      {
        "index": 2,
        "name": "Country",
      },
      {
        "index": 3,
        "name": "RNB",
      },
      {
        "index": 4,
        "name": "Oldschool",
      },
      {
        "index": 5,
        "name": "HipHop",
      },
      {
        "index": 6,
        "name": "Deutsch",
      },
      {
        "index": 7,
        "name": "Schlager",
      },
      {
        "index": 8,
        "name": "Modern",
      },
      {
        "index": 9,
        "name": "Classic",
      },
      {
        "index": 10,
        "name": "Kinderlieder",
      },
      {
        "index": 11,
        "name": "Server",
      },
      {
        "index": 12,
        "name": "Techno",
      },
      {
        "index": 13,
        "name": "House",
      },
      {
        "index": 14,
        "name": "Funk",
      },
      {
        "index": 15,
        "name": "Metal",
      },
    ],
    "sumState": null,
  },
  {
    "currentAudioTitle": "stream.mp3",
    "currentPlayingTime": 0,
    "currentPlaylistIndex": 8,
    "currentSongIndex": 2,
    "currentState": 0,
    "currentVolume": 10,
    "itemId": "item3",
    "name": "Sonos Bad OG",
    "page": null,
    "playList": [
      {
        "index": 0,
        "name": "Rock",
      },
      {
        "index": 1,
        "name": "Pop",
      },
      {
        "index": 2,
        "name": "Country",
      },
      {
        "index": 3,
        "name": "RNB",
      },
      {
        "index": 4,
        "name": "Oldschool",
      },
      {
        "index": 5,
        "name": "HipHop",
      },
      {
        "index": 6,
        "name": "Deutsch",
      },
      {
        "index": 7,
        "name": "Schlager",
      },
      {
        "index": 8,
        "name": "Modern",
      },
      {
        "index": 9,
        "name": "Classic",
      },
      {
        "index": 10,
        "name": "Kinderlieder",
      },
      {
        "index": 11,
        "name": "Server",
      },
      {
        "index": 12,
        "name": "Techno",
      },
      {
        "index": 13,
        "name": "House",
      },
      {
        "index": 14,
        "name": "Funk",
      },
      {
        "index": 15,
        "name": "Metal",
      },
    ],
    "sumState": null,
  },
  {
    "currentAudioTitle": "stream.mp3",
    "currentPlayingTime": 0,
    "currentPlaylistIndex": 8,
    "currentSongIndex": 2,
    "currentState": 0,
    "currentVolume": 70,
    "itemId": "item4",
    "name": "Sonos Kinderzimmer",
    "page": null,
    "playList": [
      {
        "index": 0,
        "name": "Rock",
      },
      {
        "index": 1,
        "name": "Pop",
      },
      {
        "index": 2,
        "name": "Country",
      },
      {
        "index": 3,
        "name": "RNB",
      },
      {
        "index": 4,
        "name": "Oldschool",
      },
      {
        "index": 5,
        "name": "HipHop",
      },
      {
        "index": 6,
        "name": "Deutsch",
      },
      {
        "index": 7,
        "name": "Schlager",
      },
      {
        "index": 8,
        "name": "Modern",
      },
      {
        "index": 9,
        "name": "Classic",
      },
      {
        "index": 10,
        "name": "Kinderlieder",
      },
      {
        "index": 11,
        "name": "Server",
      },
      {
        "index": 12,
        "name": "Techno",
      },
      {
        "index": 13,
        "name": "House",
      },
      {
        "index": 14,
        "name": "Funk",
      },
      {
        "index": 15,
        "name": "Metal",
      },
    ],
    "sumState": null,
  },
  {
    "currentAudioTitle": "stream.mp3",
    "currentPlayingTime": 0,
    "currentPlaylistIndex": 8,
    "currentSongIndex": 2,
    "currentState": 1,
    "currentVolume": 100,
    "itemId": "item5",
    "name": "Sonos Partyraum",
    "page": null,
    "playList": [
      {
        "index": 0,
        "name": "Rock",
      },
      {
        "index": 1,
        "name": "Pop",
      },
      {
        "index": 2,
        "name": "Country",
      },
      {
        "index": 3,
        "name": "RNB",
      },
      {
        "index": 4,
        "name": "Oldschool",
      },
      {
        "index": 5,
        "name": "HipHop",
      },
      {
        "index": 6,
        "name": "Deutsch",
      },
      {
        "index": 7,
        "name": "Schlager",
      },
      {
        "index": 8,
        "name": "Modern",
      },
      {
        "index": 9,
        "name": "Classic",
      },
      {
        "index": 10,
        "name": "Kinderlieder",
      },
      {
        "index": 11,
        "name": "Server",
      },
      {
        "index": 12,
        "name": "Techno",
      },
      {
        "index": 13,
        "name": "House",
      },
      {
        "index": 14,
        "name": "Funk",
      },
      {
        "index": 15,
        "name": "Metal",
      },
    ],
    "sumState": null,
  },
]
`;

exports[`pools 1`] = `
[
  {
    "backwashState": 0,
    "filteringState": 0,
    "itemId": "item0",
    "name": "Schwimmbad Garten",
    "page": "",
    "sumState": 0,
    "waterTemperature": 25.65,
    "workingMode": 1,
  },
]
`;

exports[`roomTemperatures 1`] = `
[
  {
    "airQualityLevel": 512,
    "coolingModeState": 0,
    "deviceModel": 0,
    "floorTemperature": 23.2,
    "itemId": "item0",
    "name": "Wohnen Essen",
    "page": "EG",
    "relativeHumidity": 35,
    "reserved": "",
    "sumState": 0,
    "temperature": 22.4,
    "temperatureAdjustment": 3,
    "temperatureSetPoint": 22,
    "valveOpeningLevel": null,
    "workingMode": 8,
  },
  {
    "airQualityLevel": 812,
    "coolingModeState": 0,
    "deviceModel": 0,
    "floorTemperature": 23.2,
    "itemId": "item1",
    "name": "Büro",
    "page": "OG",
    "relativeHumidity": 35,
    "reserved": "",
    "sumState": 0,
    "temperature": 23.2,
    "temperatureAdjustment": 3,
    "temperatureSetPoint": 22,
    "valveOpeningLevel": null,
    "workingMode": 8,
  },
  {
    "airQualityLevel": 974,
    "coolingModeState": 0,
    "deviceModel": 0,
    "floorTemperature": 23.2,
    "itemId": "item2",
    "name": "Diele",
    "page": "EG",
    "relativeHumidity": 35,
    "reserved": "",
    "sumState": 1,
    "temperature": 22.1,
    "temperatureAdjustment": 3,
    "temperatureSetPoint": 22,
    "valveOpeningLevel": null,
    "workingMode": 8,
  },
  {
    "airQualityLevel": 421,
    "coolingModeState": 0,
    "deviceModel": 0,
    "floorTemperature": 23.2,
    "itemId": "item3",
    "name": "Gast",
    "page": "EG",
    "relativeHumidity": 35,
    "reserved": "",
    "sumState": 0,
    "temperature": 23.25,
    "temperatureAdjustment": 3,
    "temperatureSetPoint": 22,
    "valveOpeningLevel": null,
    "workingMode": 8,
  },
  {
    "airQualityLevel": 952,
    "coolingModeState": 0,
    "deviceModel": 0,
    "floorTemperature": 23.2,
    "itemId": "item4",
    "name": "Schlafen",
    "page": "OG",
    "relativeHumidity": 35,
    "reserved": "",
    "sumState": 0,
    "temperature": 22.56,
    "temperatureAdjustment": 3,
    "temperatureSetPoint": 22,
    "valveOpeningLevel": null,
    "workingMode": 8,
  },
  {
    "airQualityLevel": 716,
    "coolingModeState": 0,
    "deviceModel": 3,
    "floorTemperature": 23.2,
    "itemId": "item5",
    "name": "Bad EG",
    "page": "EG",
    "relativeHumidity": 35,
    "reserved": "",
    "sumState": 0,
    "temperature": 22.15,
    "temperatureAdjustment": 3,
    "temperatureSetPoint": 22,
    "valveOpeningLevel": null,
    "workingMode": 8,
  },
  {
    "airQualityLevel": 971,
    "coolingModeState": 0,
    "deviceModel": 0,
    "floorTemperature": 23.2,
    "itemId": "item6",
    "name": "Kinder Zimmer",
    "page": "OG",
    "relativeHumidity": 35,
    "reserved": "",
    "sumState": 1,
    "temperature": 22.42,
    "temperatureAdjustment": 3,
    "temperatureSetPoint": 22,
    "valveOpeningLevel": null,
    "workingMode": 8,
  },
  {
    "airQualityLevel": 563,
    "coolingModeState": 0,
    "deviceModel": 3,
    "floorTemperature": 23.2,
    "itemId": "item7",
    "name": "Bad OG",
    "page": "OG",
    "relativeHumidity": 35,
    "reserved": "",
    "sumState": 0,
    "temperature": 22.12,
    "temperatureAdjustment": 3,
    "temperatureSetPoint": 22,
    "valveOpeningLevel": null,
    "workingMode": 8,
  },
]
`;

exports[`saunas 1`] = `
[
  {
    "burnerTemperature": 115.75,
    "currentState": 1,
    "errorState": 0,
    "itemId": "item0",
    "name": "Sauna",
    "page": "Saunas",
    "roomRelativeHumidityLevel": 79.5,
    "roomRelativeHumiditySetPointLevel": 80,
    "roomTemperature": 75.8,
    "roomTemperatureSetPoint": 80,
    "sumState": 0,
    "workingMode": 1,
  },
]
`;

exports[`smsEmail 1`] = `
[
  {
    "currentState": 1,
    "itemId": "item0",
    "name": "SMS/EMAIL",
    "page": null,
    "sumState": null,
  },
]
`;

exports[`stoves 1`] = `
[
  {
    "currentState": 7,
    "flapOpeningLevel": 34.5,
    "itemId": "item0",
    "name": "Wohnzimmer Kamin",
    "page": "Untergeschoss",
    "sumState": 0,
    "temperature": 125,
    "workingState": 1,
  },
  {
    "currentState": 7,
    "flapOpeningLevel": 56.45,
    "itemId": "item1",
    "name": "Herrenzimmer Kamin",
    "page": "Obgergeschoss",
    "sumState": 0,
    "temperature": 201.23,
    "workingState": 1,
  },
]
`;

exports[`vents 1`] = `
[
  {
    "airQuality": null,
    "bypassMode": null,
    "bypassState": 0,
    "co2": null,
    "coolingModeState": 1,
    "dehumidificationState": null,
    "deviceModel": 5,
    "exhaustAirTemperature": 24.1,
    "exhaustAirWorkingLevel": 75,
    "itemId": "item0",
    "maximumWorkingLevel": 4,
    "name": "Wohnraumlüftung",
    "outgoingAirTemperature": -0.9,
    "outsideAirTemperature": 8.3,
    "page": null,
    "relativeHumidity": 38,
    "subWorkingMode": 0,
    "sumState": 0,
    "supplyAirTemperature": 46.2,
    "supplyAirWorkingLevel": 75,
    "ventLevel": 3,
    "workingMode": 0,
  },
  {
    "airQuality": null,
    "bypassMode": null,
    "bypassState": null,
    "co2": null,
    "coolingModeState": null,
    "dehumidificationState": null,
    "deviceModel": 0,
    "exhaustAirTemperature": null,
    "exhaustAirWorkingLevel": null,
    "itemId": "item1",
    "maximumWorkingLevel": 4,
    "name": "Bad EG",
    "outgoingAirTemperature": null,
    "outsideAirTemperature": null,
    "page": null,
    "relativeHumidity": null,
    "subWorkingMode": null,
    "sumState": null,
    "supplyAirTemperature": null,
    "supplyAirWorkingLevel": 25,
    "ventLevel": 1,
    "workingMode": null,
  },
  {
    "airQuality": null,
    "bypassMode": null,
    "bypassState": null,
    "co2": null,
    "coolingModeState": null,
    "dehumidificationState": null,
    "deviceModel": 0,
    "exhaustAirTemperature": null,
    "exhaustAirWorkingLevel": null,
    "itemId": "item2",
    "maximumWorkingLevel": 4,
    "name": "Bad OG",
    "outgoingAirTemperature": null,
    "outsideAirTemperature": null,
    "page": null,
    "relativeHumidity": null,
    "subWorkingMode": null,
    "sumState": null,
    "supplyAirTemperature": null,
    "supplyAirWorkingLevel": 100,
    "ventLevel": 4,
    "workingMode": null,
  },
]
`;

exports[`wallBoxes 1`] = `
[
  {
    "chargeDurationTime": "0s",
    "chargeRequestState": 0,
    "chargeStartTime": "",
    "chargeState": 0,
    "chargeUserIndex": null,
    "chargeUserName": "",
    "chargingPowerSetPoint": 22,
    "currentChargingEnergy": "0.00",
    "currentChargingPower": 0,
    "electricCurrentSetPoint": 0,
    "itemId": "item0",
    "maximumChargingPower": 0,
    "name": "Wallbox Garage",
    "page": null,
    "pluggedState": 0,
    "sumState": 0,
    "wallBoxUser": [
      {
        "id": 1,
        "totalEnergy": 0.497,
      },
      {
        "id": 2,
        "totalEnergy": 2.435,
      },
      {
        "id": 3,
        "totalEnergy": 0.135,
      },
      {
        "id": 4,
        "totalEnergy": 0.154,
      },
      {
        "id": 5,
        "totalEnergy": 0.48,
      },
    ],
  },
  {
    "chargeDurationTime": "0s",
    "chargeRequestState": 0,
    "chargeStartTime": "",
    "chargeState": 1,
    "chargeUserIndex": null,
    "chargeUserName": "",
    "chargingPowerSetPoint": 11,
    "currentChargingEnergy": "0.00",
    "currentChargingPower": 11,
    "electricCurrentSetPoint": 0,
    "itemId": "item1",
    "maximumChargingPower": 0,
    "name": "Wallbox Öffentlich",
    "page": null,
    "pluggedState": 1,
    "sumState": 0,
    "wallBoxUser": [
      {
        "id": 1,
        "totalEnergy": 1221.34,
      },
      {
        "id": 2,
        "totalEnergy": 23421.98,
      },
      {
        "id": 3,
        "totalEnergy": 0,
      },
      {
        "id": 4,
        "totalEnergy": 12871.24,
      },
      {
        "id": 5,
        "totalEnergy": 1924.45,
      },
    ],
  },
]
`;

exports[`weather 1`] = `
{
  "brightness": 0.2,
  "brightnessEast": 0.21,
  "brightnessWest": 0.224,
  "humidity": 82,
  "itemId": null,
  "name": null,
  "page": null,
  "rain": 0,
  "sumState": null,
  "temperature": 14.1,
  "twilight": 224.399994,
  "wind": 0.78,
}
`;
